--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "uuid": "^8.3.1",
+    "v-video-embed": "^1.0.8",
+    "video.js": "^7.11.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
